tests/specs/ecosystem/std/archive/0_203_0.test
std/archive/0.203.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.203.0": "jsr:@std/internal@0.203.0"
    },
    "jsr": {
      "@std/internal@0.203.0": {
        "integrity": "e3c160f8b0693352e52a73f48071c24a5b76cc428de5624f353cbd2bb04a8a1b"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

error: Type checking failed.

